CM3: fixed z-index setting that prevented entire div from being clickable in IE

--- a/sitedev/css/modules.css
+++ b/sitedev/css/modules.css
@@ -726,7 +726,7 @@
 
 #moduleCM3 .videoCarousel .videoThumb.current a.photoGallery,
 #moduleCM3 .videoCarousel .videoThumb.current a.youtube {
-	z-index: 1;
+	z-index: 3;
 }
 
 #moduleCM3 .videoDescription p {
